Use ButtonGroup to prevent shadow overlapping.

--- a/client/styles/components/_buttons.scss
+++ b/client/styles/components/_buttons.scss
@@ -13,3 +13,12 @@
     background-color: $scary-cherry;
   }
 }
+
+// Should we switch to spinal case for CSS?
+.button-group {
+  @include lightShadow;
+
+  .button {
+    box-shadow: none;
+  }
+}
